# tree-sitter-crystal-boo

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
bindings/c/: tree-sitter-crystal-boo.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_crystal_boo/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCrystalBoo/: crystal-boo.h
bindings/swift/TreeSitterCrystalBooTests/: TreeSitterCrystalBooTests.swift
src/: scanner.c
